# mtfind

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README.md
include/: search_core.h
src/: main.cpp  search_core.cpp
